Changes to the blog

--- a/blog.html
+++ b/blog.html
@@ -4,12 +4,23 @@
 	<style>
 		header {
 			text-align: center;
+			background: red;
+			color: white;
+		}
+		a {
+			color: white;
+		}
+		h1 {
+			font-size: 70px;
+			
 		}
 		ul {
 			padding: 10px;
+			background: black;
 		}
 		li {
 			display: inline;
+			padding: 0px 10px 0px 10px;
 		}
 	</style>
 </head>
@@ -25,4 +36,8 @@
 			<li><a href="#">Resume</a></li>
 		</ul>
 	</header>
+	<article>
+		<h2></h2>
+		<p></p>
+	</a>
 </body>
