--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <head>
+	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js">
+	</script> -->
+	<script src="jquery-1.10.2.min.js"></script>
 	<link href="normalize.css" rel="stylesheet">
 	<style>
 		header {
@@ -16,11 +19,28 @@
 		}
 		ul {
 			padding: 10px;
-			background: black;
+			background: rgba(0,0,0,0.5);
 		}
 		li {
 			display: inline;
 			padding: 0px 10px 0px 10px;
+		}
+		article {
+			/*width: 500px;*/
+			max-width: 500px;
+			padding: 20px;
+			margin: 0 auto;
+		}
+		/*media query - A technique that allows us to set CSS styles that only activate when the browser is a certain width
+		*/
+		@media (max-width: 500px) { /*set the condition-when this condition is true the CSS inside it gets activated*/
+				h1 {
+					font-size: 36px;
+				}
+				li {
+					display: block;
+					padding: 5px;
+				}							
 		}
 	</style>
 </head>
@@ -37,7 +57,24 @@
 		</ul>
 	</header>
 	<article>
-		<h2></h2>
-		<p></p>
-	</a>
+		<h2>Blog Post 1</h2>
+		<p>Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....</p>
+		<button>Like</button>
+	</article>
+	<article>
+		<h2>Blog Post 2</h2>
+		<p>Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....</p>
+		<button>Like</button>
+	</article>
+	<article>
+		<h2>Blog Post 3</h2>
+		<p>Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....Lorem Ipsum....</p>
+		<button>Like</button>
+	</article>
+	<script>
+		// alert("Javascript works")
+		$("button").on("click", function() {
+	      alert("clicked!")
+	    });
+	</script>
 </body>
